fix: Scrollbars

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -38,26 +38,12 @@
 	--rounded-20: 20px;
 }
 
-::-webkit-scrollbar {
-	width: 8px;
-	height: 8px;
-}
-
-::-webkit-scrollbar-track {
-	background-color: none;
-}
-
-::-webkit-scrollbar-thumb {
-	background-color: var(--clr-scrollbar-thumb);
-	border-radius: var(--rounded-20);
-}
-
 html {
 	font-size: 62.5%;
-	scroll-padding-top: var(--spacing-32);
-	scrollbar-color: var(--clr-scrollbar-thumb) transparent;
+	scroll-padding-top: var(--spacing-64);
 	scroll-behavior: smooth;
-	scroll-padding-top: 8rem;
+	scrollbar-width: thin;
+	scrollbar-color: var(--clr-scrollbar-thumb) transparent;
 }
 
 html,
